--- a/BatB/app/src/main/res/values/strings.xml
+++ b/BatB/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">BatB</string>
+    <string name="camera">CAMERA</string>
+    <string name="album">ALBUM</string>
+    <string name="quit">QUIT</string>
 </resources>
